--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-fastapi==0.94.1
-millify==0.1.1
-pandas==1.4.4
-plotly==5.13.1
-requests==2.28.2
-scikit_learn==1.2.2
-streamlit==1.20.0
-tensorflow==2.10.1
-uvicorn==0.21.0
+fastapi
+millify
+numpy
+pandas
+plotly
+requests
+scikit_learn
+streamlit
+tensorflow
+uvicorn
